syntax = "proto3";
package isuxportal.proto.resources;
option go_package = "github.com/isucon/portal/proto.go/isuxportal/resources";

message Staff {
  int64 id = 1;
  string github_login = 2;
}
